html and css layout added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-index
+<!DOCTYPE html>
+<html>
+
+  <head>
+
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <title>Excursion</title>
+
+  </head>
+
+  <body>
+
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+    </header>
+
+    <h5>Download Excursion (Coming soon!)</h5>
+
+    <video src="./resources/video.mp4">Excursion App On Phone</video>
+
+    <h2>Your Personal Travel Guide</h2>
+
+    <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+
+    <img src="./resources/camp.webp">
+
+    <img src="./resources/phone.webp">
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <h5>Download Excursion (Coming soon!)</h5>
+
+    <footer>Excursion 2020 &#169;</footer>
+
+  </body>
+
+</html>
